# cupido

./: .gitignore  config.py  cupido.toml  data.ipynb  data.py  inference.ipynb  inference_gemini.ipynb  inference_grobid.ipynb  main.py  playground.ipynb  pyproject.toml  train.py
